k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment-suggest
  labels:
    app: backend-suggest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-suggest
  template:
    metadata:
      labels:
        app: backend-suggest
    spec:
      containers:
      - name: backend
        image: akshat1414/suggest-microservice:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8083
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "400m"
            memory: "300Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
