k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-suggest-service
spec:
  selector:
    app: backend-suggest
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8083
    - name: metrics
      protocol: TCP
      port: 8083          
      targetPort: 8083
